2007-11-26  Julian Lamb

	* src/draw-gdk.[ch],src/gerber.c: Add gdk rendering code back in so it can
	  be compiled if cairo isn't available.
	* src/gerber.c: Fix g_strconcat calls by adding NULL to end of arguments.
	  
2007-11-20  Julian Lamb

	* src/draw.c: Add rendering code for arcs. Also, fix the rendiring of oval
	  aperatures.

2007-11-19  Julian Lamb

	* src/draw.[ch], examples/am-test/am-test.gbx: Complete the conversion to
	  the cairo rendering code. All aperature macros now render correctly, as
	  well as clear layer polarities. Note that several bugs were found in
	  the old aperature macro rendering functions (some rotations were not
	  done correctly, and the moire and thermal outer diameters weren't
	  correctly rendered) and those were fixed in the cairo conversion. The
	  am-test.gbx file was modified slightly to test these fixes.
	* src/pick-and-place.c: Added an additional sanity check to make sure we
	  don't accidentally open some gerber files as PNP place files.
	* configure.in: Add explicit cairo check.

2007-02-28  Julian Lamb

	* src/draw.[ch], src/draw_amacro.[ch], src/gerbv.c: Start converting
	  rendering from gdk to cairo, in order to improve rendering capability,
	  and allow for future export to PDF/SVG/PNG/PS capability. The
	  draw_amacro files were combined into the draw files, since most of the
	  rendering functions were common between the two.

2007-02-21  Julian Lamb

	* src/gerb_image.c, src/gerb_image.h: Added string label capability
	  to the gerb_image struct for future rendering of labels.
	* src/pick-and-place.c: Updated parser to accept pick-and-place
	  files output from the PCB program.  Performed more code cleanup
	  and implemented min/max screen calcs based on pick-and-place
	  files.
	* example/LED.xy: Added a sample pick-and-place file output
	  from PCB, based on the LED example in the PCB source code.

2007-02-17  Julian Lamb

	* src/pick-and-place.c, src/pick-and-place.h, src/gerbv.c,
	  src/csv.c: