@@ -28,8 +28,12 @@
 #include <locale.h>
 #include <errno.h>
 
+#include "config.h"
 #include "gerber.h"
 #include "gerb_error.h"
+
+/* DEBUG printing.  #define DEBUG 1 in config.h to use this fcn. */
+#define dprintf if(DEBUG) printf
 
 #define NOT_IMPL(fd, s) do { \
                              GERB_MESSAGE("Not Implemented:%s\n", s); \
@@ -125,15 +129,20 @@ parse_gerb(gerb_file_t *fd)
     /*
      * Start parsing
      */
+    dprintf("In parse_gerb, starting to parse file...\n");
+
     while ((read = gerb_fgetc(fd)) != EOF) {
 	switch ((char)(read & 0xff)) {
 	case 'G':
+	    // dprintf("... Found G code\n");
 	    parse_G_code(fd, state, image->format);
 	    break;
 	case 'D':
+	    // dprintf("... Found D code\n");
 	    parse_D_code(fd, state);
 	    break;
 	case 'M':
+	    // dprintf("... Found M code\n");
 	    switch(parse_M_code(fd)) {
 	    case 1 :
 	    case 2 :
@@ -146,6 +155,7 @@ parse_gerb(gerb_file_t *fd)
 	    }
 	    break;
 	case 'X':
+	    // dprintf("... Found X code\n");
 	    coord = gerb_fgetint(fd, &len);
 	    if (image->format && image->format->omit_zeros == TRAILING) {
 
@@ -172,6 +182,7 @@ parse_gerb(gerb_file_t *fd)
 	    state->changed = 1;
 	    break;
 	case 'Y':
+	    // dprintf("... Found Y code\n");
 	    coord = gerb_fgetint(fd, &len);
 	    if (image->format && image->format->omit_zeros == TRAILING) {
 
@@ -198,14 +209,17 @@ parse_gerb(gerb_file_t *fd)
 	    state->changed = 1;
 	    break;
 	case 'I':
+	    // dprintf("... Found I code\n");
 	    state->delta_cp_x = gerb_fgetint(fd, NULL);
 	    state->changed = 1;
 	    break;
 	case 'J':
+	    // dprintf("... Found J code\n");
 	    state->delta_cp_y = gerb_fgetint(fd, NULL);
 	    state->changed = 1;
 	    break;
 	case '%':
+	    // dprintf("... Found % code\n");
 	    parse_rs274x(fd, image, state);
 	    while (1){
 	      char c=gerb_fgetc(fd);
@@ -214,6 +228,7 @@ parse_gerb(gerb_file_t *fd)
 	    }
 	    break;
 	case '*':
+	    // dprintf("... Found * code\n");
 	    if (state->changed == 0) break;
 	    state->changed = 0;
 
@@ -434,6 +449,8 @@ parse_gerb(gerb_file_t *fd)
     }
     
     GERB_COMPILE_ERROR("File is missing gerber End-Of-File\n");
+
+    dprintf("               ... done parsing Gerber file\n");
     
     return image;
 } /* parse_gerb */
